--- a/app/src/main/res/layout/listitemproyek.xml
+++ b/app/src/main/res/layout/listitemproyek.xml
@@ -23,7 +23,7 @@
             android:padding="14dp">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/dateproyek"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="12-20-2020"
@@ -54,6 +54,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/nameproyek"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
@@ -64,7 +65,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/lokasiproyek"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="32dp"
