add basic login

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nama"
-            android:inputType="textEmailAddress"
+            android:inputType="textLongMessage|textEmailAddress"
             android:paddingBottom="16dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="No Telp"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:paddingBottom="16dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -67,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"
-            android:inputType="textEmailAddress"
+            android:inputType="text"
             android:paddingBottom="16dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
