--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -43,7 +43,7 @@
                 android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/nameuser"
                 android:layout_width="189dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
