--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,6 +5,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@color/bg_screen4r</item>
+        <item name="android:textColor">@color/white_default</item>
     </style>
     <style name="AppTheme.darks">
         <item name="windowActionBar">false</item>
