--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,5 +48,7 @@
     <color name="message">#7a7a7a</color>
     <color name="bg_action_mode">#757575</color>
     <color name="bg_circle_default">#666666</color>
+    <color name="white_default">#FFFFFF</color>
+
 
 </resources>
