--- a/app/src/main/res/drawable-xhdpi/cornered_button.xml
+++ b/app/src/main/res/drawable-xhdpi/cornered_button.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     android:shape="rectangle">
 
-    <solid
-        android:color="@color/colorAccent1"/>
+    <gradient
+        android:startColor="@color/bg_screen4r" android:endColor="@color/colorAccent1"/>
 
     <corners
         android:radius="50dp"/>
