--- a/app/src/main/res/drawable/bg_circle.xml
+++ b/app/src/main/res/drawable/bg_circle.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid
-        android:color="@color/bg_circle_default"/>
+    <gradient
+        android:startColor="@color/bg_screen1" android:endColor="@color/dot_dark_screen1" />
 
     <size
         android:width="120dp"
