--- a/app/src/main/res/layout/activity_edit__proyek.xml
+++ b/app/src/main/res/layout/activity_edit__proyek.xml
@@ -11,7 +11,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/margin_short"
-    tools:context=".Add_Proyek">
+    tools:context=".Edit_Proyek">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Theme.AppCompat.Light.DarkActionBar"
