add perhitungan plesteran&acian

--- a/app/src/main/res/layout/activity_perhitunganplesteran.xml
+++ b/app/src/main/res/layout/activity_perhitunganplesteran.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Perhitunganbidang">
+    tools:context=".Perhitunganplesteran">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,14 +19,14 @@
 
 
             <ImageView
-                android:id="@+id/greeting_img"
+                android:id="@+id/bgplester"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/masangbatako" />
 
             <TextView
-                android:id="@+id/greeting_text"
+                android:id="@+id/textplester"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="70dp"
@@ -41,14 +41,14 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/greeting_text2"
+                android:id="@+id/textplester1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:background="#B4B16609"
                 android:fontFamily="monospace"
                 android:gravity="center"
-                android:text="Perhitungan Bidang Bangunan"
+                android:text="Perhitungan Plesteran Bangunan"
                 android:textColor="#FDFDFD"
                 android:textSize="20dp"
                 android:textStyle="bold" />
@@ -85,7 +85,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/goldrt"
+                            android:id="@+id/totalplester"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -99,7 +99,7 @@
                             android:id="@+id/garis"
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
-                            android:layout_below="@id/goldrt"
+                            android:layout_below="@id/totalplester"
                             android:layout_marginTop="10dp"
                             android:background="#f0efef"
                             android:orientation="horizontal" />
@@ -119,7 +119,7 @@
                                 android:gravity="center">
 
                                 <ImageView
-                                    android:id="@+id/gold"
+                                    android:id="@+id/rincian"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_centerHorizontal="true"
@@ -128,9 +128,9 @@
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_below="@id/gold"
+                                    android:layout_below="@id/rincian"
                                     android:gravity="center"
-                                    android:text="Rincian Data Bidang"
+                                    android:text="Rincian Data Plesteran"
                                     android:textColor="#000"
                                     android:textSize="12dp" />
 
@@ -145,7 +145,7 @@
                                 android:gravity="center">
 
                                 <ImageView
-                                    android:id="@+id/elixir"
+                                    android:id="@+id/panduanplester"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_centerHorizontal="true"
@@ -155,7 +155,7 @@
 
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_below="@id/elixir"
+                                    android:layout_below="@id/panduanplester"
                                     android:gravity="center"
                                     android:text="Panduan Aplikasi"
                                     android:textColor="#000"
@@ -172,7 +172,7 @@
                                 android:gravity="center">
 
                                 <ImageView
-                                    android:id="@+id/rician"
+                                    android:id="@+id/tambahplester"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_centerHorizontal="true"
@@ -181,7 +181,7 @@
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_below="@id/rician"
+                                    android:layout_below="@id/tambahplester"
                                     android:gravity="center"
                                     android:text="Tambah bidang"
                                     android:textColor="#000"
@@ -205,7 +205,7 @@
         android:id="@+id/textView20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DATA BIDANG" />
+        android:text="DATA PLESTERAN" />
 
     <ScrollView
         android:layout_width="match_parent"
