--- a/app/src/main/res/layout/activity_tambahplesteran.xml
+++ b/app/src/main/res/layout/activity_tambahplesteran.xml
@@ -10,7 +10,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/margin_short"
-    tools:context=".Tambahbidang">
+    tools:context=".Tambahplesteran">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,14 +18,13 @@
         android:layout_weight="1"
         android:background="@android:color/white"
         android:orientation="vertical"
-       >
-
+        >
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Menghitung luas Bidang"
+            android:text="Menghitung luas area dinding"
             android:textColor="#FA575656" />
 
         <TextView
@@ -36,7 +35,42 @@
             android:text="Isikan dalam satuan meter*"
             android:textColor="#FA575656" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Pilih data dinding"
+                android:textColor="#FA575656" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <Spinner
+                    android:id="@+id/spindinding"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="#FA575656" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,14 +79,44 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:layout_width="126dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/panjangb"
-                    android:layout_width="113dp"
+                    android:id="@+id/panjangpl"
+                    android:layout_width="45dp"
                     android:layout_height="wrap_content"
-                    android:hint="Panjang"
+                    android:hint="p"
+                    android:inputType="number|numberDecimal"
+                    android:paddingBottom="16dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Theme.AppCompat.Light.DarkActionBar"
+                android:layout_width="49dp"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tinggipl"
+                    android:layout_width="46dp"
+                    android:layout_height="wrap_content"
+                    android:hint="t"
+                    android:inputType="number|numberDecimal"
+                    android:paddingBottom="16dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Theme.AppCompat.Light.DarkActionBar"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tebal"
+                    android:layout_width="58dp"
+                    android:layout_height="wrap_content"
+                    android:hint="tebal"
                     android:inputType="numberDecimal"
                     android:paddingBottom="16dp" />
 
@@ -60,14 +124,14 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:layout_width="125dp"
+                android:layout_width="83dp"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tinggib"
-                    android:layout_width="125dp"
+                    android:id="@+id/sisi"
+                    android:layout_width="46dp"
                     android:layout_height="wrap_content"
-                    android:hint="Tinggi"
+                    android:hint="sisi"
                     android:inputType="number|numberDecimal"
                     android:paddingBottom="16dp" />
 
@@ -84,105 +148,12 @@
         </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="173dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:text="isi data daur pintu"
-                android:textColor="#FA575656" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="isi data daur jendela"
-                android:textColor="#FA575656" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:layout_width="74dp"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/ppintu"
-                    android:layout_width="68dp"
-                    android:layout_height="wrap_content"
-                    android:hint="Panjang"
-                    android:inputType="textLongMessage|textEmailAddress"
-                    android:paddingBottom="16dp"
-                    android:text="0" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:layout_width="99dp"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tpintu"
-                    android:layout_width="79dp"
-                    android:layout_height="wrap_content"
-                    android:hint="Tinggi"
-                    android:inputType="textEmailAddress"
-                    android:paddingBottom="16dp"
-                    android:text="0" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:layout_width="102dp"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/panjangj"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:hint="Panjang"
-                    android:inputType="textEmailAddress"
-                    android:paddingBottom="16dp"
-                    android:text="0" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Theme.AppCompat.Light.DarkActionBar"
-                android:layout_width="85dp"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tinggij"
-                    android:layout_width="77dp"
-                    android:layout_height="wrap_content"
-                    android:hint="Tinggi"
-                    android:inputType="textLongMessage|textEmailAddress"
-                    android:paddingBottom="16dp"
-                    android:text="0" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-
         <TextView
             android:id="@+id/textView14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Luas bidang anda"
+            android:text="Volume plesteran (m3)"
             android:textColor="#FA575656" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -191,67 +162,14 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/luasbidang"
+                android:id="@+id/volume"
                 android:layout_width="137dp"
                 android:layout_height="wrap_content"
-                android:hint="Luas bidang"
+                android:hint="volume"
                 android:inputType="text"
                 android:paddingBottom="16dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="270dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Pilih batako/bata"
-                android:textColor="#FA575656" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <Spinner
-                    android:id="@+id/spinbata"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#FA575656" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Theme.AppCompat.Light.DarkActionBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/hbata"
-                        android:layout_width="215dp"
-                        android:layout_height="wrap_content"
-                        android:enabled="false"
-                        android:hint="Rp."
-                        android:inputType="text"
-                        android:paddingBottom="16dp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-        </LinearLayout>
 
 
         <LinearLayout
@@ -405,17 +323,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingTop="10dp">
-
-            <include layout="@layout/contenthasil" />
-
-
-        </LinearLayout>
 
     </LinearLayout>
 
