--- a/app/src/main/res/layout/activity_tambahacian.xml
+++ b/app/src/main/res/layout/activity_tambahacian.xml
@@ -113,7 +113,7 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tebal"
+                    android:id="@+id/sisi"
                     android:layout_width="58dp"
                     android:layout_height="wrap_content"
                     android:hint="sisi"
@@ -147,7 +147,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/volume"
+                android:id="@+id/luas"
                 android:layout_width="137dp"
                 android:layout_height="wrap_content"
                 android:hint="luas"
@@ -260,7 +260,17 @@
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingTop="10dp">
 
+            <include layout="@layout/hasil_acian" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
