--- a/app/src/main/res/layout/activity_tambahplesteran.xml
+++ b/app/src/main/res/layout/activity_tambahplesteran.xml
@@ -322,7 +322,17 @@
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingTop="10dp">
 
+            <include layout="@layout/hasil_plesteran" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
