--- a/app/src/main/res/layout/listitemproyek.xml
+++ b/app/src/main/res/layout/listitemproyek.xml
@@ -127,6 +127,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
+                        android:clickable="true"
                         android:fontFamily="@font/roboto_regular"
                         android:text="Edit Proyek"
                         android:textColor="#F0009901" />
